# azure-storage-fuse

./: .gitignore  CMakeLists.txt
blobfuse/: blobfuse.cpp  main.cpp
blobfuse/include/: BlobfuseGlobals.h
fuse_forwarder/: forwarder.h
fuse_forwarder/datasetfuse_bindings/: CMakeLists.txt  Cargo.toml
fuse_forwarder/datasetfuse_bindings/include/: datasetfuse_bindings.h
fuse_forwarder/datasetfuse_bindings/src/: lib.rs
rust/blobfuse_rslex-azure-storage/: Cargo.toml  blobfuse-rslex_azure_storage.h  cbindgen.toml
rust/blobfuse_rslex-azure-storage/src/: lib.rs
rust/blobfuse_rslex-azure-storage/src/adls_gen1_stream_handler/: mod.rs
rust/fluent-assertions/: Cargo.toml  README.md
rust/fluent-assertions-derive/: Cargo.toml
rust/fluent-assertions/src/: any.rs  binary.rs  boolean.rs  call.rs  enum_tests.rs  hashmap.rs  iter.rs  lib.rs  numeric.rs  option.rs  path.rs  result.rs  should.rs  string.rs  utils.rs
rust/rslex-azure-storage/: Cargo.toml
rust/rslex-azure-storage/src/: continuation_token_iterator.rs  lib.rs
rust/rslex-azure-storage/src/adls_gen1_stream_handler/: destination.rs  file_dto.rs  mod.rs  request_builder.rs  retry_strategy.rs  searcher.rs  stream_handler.rs
rust/rslex-azure-storage/src/adls_gen2_stream_handler/: destination.rs  mod.rs  path_dto.rs  request_builder.rs  searcher.rs  stream_handler.rs
rust/rslex-azure-storage/src/blob_stream_handler/: blob_dto.rs  destination.rs  mod.rs  public_blob.rs  request_builder.rs  searcher.rs  stream_handler.rs
rust/rslex-azure-storage/src/credential/: access_token.rs  account_key.rs  bearer_token.rs  credential_input.rs  mod.rs  sas.rs  service_principal.rs
rust/rslex-azure-storage/src/file_stream_handler/: file_dto.rs  mod.rs  request_builder.rs  searcher.rs  stream_handler.rs
rust/rslex-core/: Cargo.toml
rust/rslex-core/fluent-assertions-derive/src/: lib.rs
rust/rslex-core/src/: binary_buffer_pool.rs  database_access.rs  dataset.rs  error_value.rs  execution_error.rs  field_selectors.rs  in_memory_dataset.rs  iterator_extensions.rs  lib.rs  partition.rs  prefetching.rs  session_properties_ext.rs  stream_info.rs  value.rs  value_with_eq.rs  values_buffer_pool.rs
rust/rslex-core/src/arrow/: ffi.rs  mod.rs  record_batch_builder.rs  record_batch_iter.rs
rust/rslex-core/src/file_io/: block_buffered_read.rs  destination_accessor.rs  file_block_downloader.rs  in_memory_stream_handler.rs  mod.rs  path_ext.rs  seekable_read.rs  stream_accessor.rs  stream_copier.rs  stream_result.rs
rust/rslex-core/src/records/: field.rs  mod.rs  parse.rs  records.rs
rust/rslex-core/src/test_helper/: collect_execution_results_assertions.rs  dataset_assertions.rs  mod.rs  record_batch_partition.rs  stubbed_stream_handler.rs
rust/rslex-http-stream/: Cargo.toml
rust/rslex-http-stream/src/: encoded_url.rs  lib.rs
rust/rslex-http-stream/src/destination/: append_writer.rs  chunked_writer.rs  destination.rs  fake_request_builder.rs  mod.rs  parallel_writer.rs
rust/rslex-http-stream/src/glob_pattern/: mod.rs  search_context.rs  search_results.rs
rust/rslex-http-stream/src/http_client/: async_body.rs  credential.rs  execution.rs  fake_http_client.rs  http_client_builder.rs  http_error.rs  hyper_client.rs  mod.rs  proxy.rs  redirect.rs  request.rs  response.rs  timeout.rs
rust/rslex-http-stream/src/http_stream/: mod.rs  opener.rs  seekable_read.rs  unseekable_read.rs
rust/rslex-http-stream/src/http_stream_handler/: mod.rs  request_builder.rs  stream_handler.rs
rust/rslex-http-stream/src/retry/: backoff.rs  http_client_retry.rs  mod.rs  retry.rs
rust/rslex-http-stream/tests/: http_client_proxy_tests.rs
rust/tracing-sensitive/: Cargo.toml
rust/tracing-sensitive/src/: layer.rs  lib.rs
