[package]
name = "rslex-core"
version = "0.1.0"
edition = "2018"

[dependencies]
arrow = "3.0.0"
chrono = "0.4.19"
crossbeam-channel = "0.5.0"
crossbeam-queue = "0.2.3"
crossbeam-utils = "0.8.3"
derivative = "2.2.0"
futures = "0.3.15"
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.14"
num = "0.3.1"
num_cpus = "1.13.0"
regex = "1.4.3"
strum_macros = "0.20"
tendril = "0.4.2"
thiserror = "1.0.24"
threadpool = "1.8.1"
tracing = "0.1.25"
tracing-sensitive = { path = "../tracing-sensitive" }
uuid = { version = "0.8.2", features = ["v4"] }
fluent-assertions = { path = "../fluent-assertions", optional = true }
http = "0.2.3"

[dev-dependencies]
criterion = "0.3.5"
rand = "0.7.3"
tempfile = "3.2.0"
fluent-assertions = { path = "../fluent-assertions" }
uuid = { version = "0.8.2", features = ["v4"] }

tokio-test = "0.4.2"

[features]
default = []
test_helper = ["fluent-assertions"]